Replace harpnative with harpguru-expo-boilerplate
This is essentially just a folder rename, but it took a bit of work with
the git submodules to make sure it was done properly.

1. git submodule deinit -f -- harpnative
2. rm -rf .git/modules/harpnative
3. git rm -f harpnative
4. git submodule add .... harpguru-expo-boilerplate (and then check out
the correct branch)

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "harpguru-core"]
 	path = harpguru-core
 	url = https://github.com/js-jslog/harpnative.git
-[submodule "harpnative"]
-	path = harpnative
+[submodule "harpguru-expo-boilerplate"]
+	path = harpguru-expo-boilerplate
 	url = https://github.com/js-jslog/harpnative.git
